[package]
name = "hanzo-consensus"
version = "1.1.23"
edition = "2021"
description = "Hanzo Network — Quasar post-quantum probabilistic consensus engine (wraps lux-consensus; Wave/FPC/Photon/Focus + Quasar P3Q finality)"
license = "MIT"
repository = "https://github.com/hanzonet/consensus"

[dependencies]
# Lux consensus SDK (Quasar protocol)
lux-consensus = "1.22"

# PQC for dual certificates

# Core deps

[dependencies.chrono]
version = "0.4"

[dependencies.async-trait]
version = "0.1.74"

[dependencies.blake3]
version = "1.2.0"

[dependencies.log]
version = "0.4.20"

[dependencies.thiserror]
version = "2.0.3"

[dependencies.anyhow]
version = "1.0.94"

[dependencies.serde_json]
version = "1.0.117"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
[dependencies.tokio]
version = "1.36"
features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time"]

hanzo-pqc = "1.1.22"
[dev-dependencies]
[dev-dependencies.tempfile]
version = "3.19"


[dev-dependencies.tokio-test]
version = "0.4"
